solved deploy issu

--- a/Excel_Form/client/public/index.html
+++ b/Excel_Form/client/public/index.html
@@ -21,8 +21,9 @@
       rel="stylesheet"
     />
 
+    <base href="/" />
     <link rel="stylesheet" href="style.css" />
-    <title>React App</title>
+    <title>MS Excel</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
